# jellyfilter

./: .gitignore  CLAUDE.md  LICENSE  README.md  deploy.sh
companion-ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
companion-ui/src/: main.tsx
companion-ui/src/api/: jellyfilter.ts  jellyfin.ts
companion-ui/src/components/: Layout.tsx
companion-ui/src/hooks/: useSetup.ts
companion-ui/src/pages/: ItemDetail.tsx  Library.tsx  Preferences.tsx  Queue.tsx  Setup.tsx
docker/: docker-compose.jellyfilter.yml
plugin/: JellyFilter.sln  build.sh
plugin/JellyFilter/: JellyFilter.csproj  Plugin.cs
plugin/JellyFilter/Api/: JellyFilterController.cs
plugin/JellyFilter/Configuration/: PluginConfiguration.cs
plugin/JellyFilter/Edl/: EdlLoader.cs  EdlModels.cs
plugin/JellyFilter/Preferences/: UserFilterPreferences.cs
plugin/JellyFilter/Transcode/: FilterTranscodeHook.cs
plugin/ffmpeg-wrapper/: jellyfilter-ffmpeg
whisper-pipeline/: Dockerfile  config.yaml  pyproject.toml
whisper-pipeline/src/: api_server.py  db.py  edl_writer.py  jellyfin_client.py  main.py  nudity_detector.py  profanity_detector.py  transcriber.py  watcher.py
