[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfilter-whisper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.3",
    "profanity-check>=1.0.3",
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "nudenet>=3.4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
